Fixed slideshow contrast

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -4,11 +4,6 @@
   flex-direction: column;
   justify-content: center;
 
-  background-size: cover;
-  background-position: center;
-
-  animation: slideshow 30s ease-in-out infinite;
-
   padding: 24px;
 }
 
@@ -44,23 +39,39 @@
 }
 
 /* Slideshow */
-.title_img_0 {
+.title::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-size: cover;
+  background-position: center;
+
+  z-index: -999;
+
+  filter: brightness(0.5);
+}
+
+.title_img_0::before {
   background-image: url("/assets/team/0.jpeg");
 }
 
-.title_img_1 {
+.title_img_1::before {
   background-image: url("/assets/team/1.jpeg");
 }
 
-.title_img_2 {
+.title_img_2::before {
   background-image: url("/assets/team/2.jpeg");
 }
 
-.title_img_3 {
+.title_img_3::before {
   background-image: url("/assets/team/3.jpeg");
 }
 
-.title_img_4 {
+.title_img_4::before {
   background-image: url("/assets/team/4.jpeg");
 }
 
